syntax = "proto3";

package ecommerce;

service OrderManagement {
    rpc processOrders(stream OrderReply)
        returns (stream CombinedShipment);
}

message OrderReply {
    string message = 1;
}

message Order {
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price = 4;
    string destination = 5;
}

message CombinedShipment {
    string id = 1;
    string status = 2;
    repeated Order ordersList = 3;
}

// cd bidirectionalstreamingrpc
// protoc -I /Users/lichao30/gopath/pkg/mod/github.com/gogo/protobuf@v1.3.1/protobuf -I ecommerce --go_out=plugins=grpc:ecommerce ecommerce/ordermanagement.proto